Adding files for April 2015 newsletter.

--- a/pnsac/PNSAC.sty
+++ b/pnsac/PNSAC.sty
@@ -96,7 +96,8 @@
   %\rule{\textwidth}{.5pt}
 
   \begin{center}
-    \includegraphics[height=3cm]{../images/NSchronicles.eps}\hspace{7mm}
+%    \includegraphics[height=3cm]{../images/NSchronicles.pdf}\hspace{7mm}
+     \includegraphics[scale=0.75]{../images/NSchronicles.pdf}\hspace{7mm}
     \fontsize{1cm}{1cm}\selectfont
     %PNSAC Newsletter
   \end{center}
