--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -14,8 +14,7 @@
 
 \address{Richard Lodge\\
 Director, President; Fund Raising\\
-613-612-4920\\
-\email{rslodgeca@gmail.com}}
+\email{info@projectnorthstar.ca}}
 
 %\address{Bill Tate\\
 %Director, Vice President; Special Events, Quarterly Meetings \\
@@ -24,12 +23,12 @@ Director, President; Fund Raising\\
 
 \address{Bruce Gemmill\\
 Director, Project Manager; Membership\\
-613-841-7248\\
-\email{dbgemmill@rogers.com}}
+\email{membership@projectnorthstar.ca}}
+
 
 \address{Garry Dupont\\
-Director, Deputy Project Manager\\
-\email{gkdupont@magma.ca}}
+Director, Deputy Project Manager}\\
+
 
 %\end{minipage}
 
@@ -41,20 +40,19 @@ Director, Deputy Project Manager\\
 %Director, NStar Chronicle Editor\\
 %\email{editor@projectnorthstar.ca}}
 
-\columnbreak
+
   
 %\address{Drew Hodge\\
 %Director, ewsletter typesetting, website, social media\\
 %\email{ldhodge@gmail.com}}
   
 \address{Phil Chrysler\\
-Merchandise\\
-\email{chrysler937@rogers.com}}
-  
+Director, Merchandise}\\
 
-\address{Roger Button, BA. MA. LLB.\\
-Director, Corporate Secretary, NStar Chronicle Editor\\\\
-\email{rgrbttn@gmail.com}}
+\columnbreak  
+
+\address{Roger Button\\
+Director, Corporate Secretary, NStar Chronicle Editor}\\
 
 \address{Paul Labranche\\
 Treasurer\\
@@ -113,8 +111,8 @@ K1K 4P8}\\
 
 \begin{figure}
     \centering
-    \mbox{\subfigure{ \href{http://www.facebook.com/PNSAC/}{\includegraphics[scale=0.3]{../images/facebook_128x128.eps}}}\quad
-    \subfigure{ \href{http://twitter.com/PnsacComms/}{\includegraphics[scale=0.3]{../images/twitter_128x128.eps}}}}
+    \mbox{\subfigure{ \href{http://www.facebook.com/PNSAC/}{\includegraphics[scale=0.1]{../images/facebook_128x128.pdf}}}\quad
+    \subfigure{ \href{http://twitter.com/PnsacComms/}{\includegraphics[scale=0.1]{../images/twitter_128x128.pdf}}}}
 \end{figure}
 
 
