--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -10,17 +10,15 @@
 \end{multicols}
 
 \begin{tabbing}
-June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
-{\normalfont\color{red}June 14, 2014}     \>
+%June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
+{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
 {\normalfont\color{red}Members' Quarterly Meeting}\\
-September 18, 2014 (proposed)      \> Board of Directors' Meeting\\ 
-September 27, 2014 (proposed)     \> Annual General Meeting\\
-September 27, 2014 (proposed)  \> Board of Directors' Meeting (post AGM)\\
-November 27, 2014 (proposed)   \> Board of Directors' Meeting -- new
-Board\\
-December 6, 2014 (proposed)  \> Members' Quarterly Meeting\\
-March 19, 2015 (proposed) \> Board of Directors' Meeting\\
-March 28, 2015 (proposed) \> Members' Quarterly Meeting
+May 23, 2015      \> Board of Directors' Meeting\\ 
+June 06, 2015     \> Doors Open Ottawa\\
+July 01, 2015  \> Canada Day\\
+September 12, 2015   \> Board of Directors' Meeting\\
+November 07, 2015  \> Board of Directors' Meeting\\
+November 21, 2015 \> Annual General Meeting and Board of Directors' Meeting
 
 \end{tabbing}
 
