--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,66 +10,40 @@
 
 \maketitle
 
-Since my last Notes from the President in December 2013, restoration
-work on the North Star has mostly been suspended. The Museum has
-needed extra working space so that exhibits could be made ready for
-the commemoration this year of the centenary of the start of the First
-World War and the 70th anniversary on June 6 of D-Day in the Second
-World War. These preparations have resulted in our normal working
-areas being unavailable for North Star restoration work.
+It is a year since I last wrote Notes from the President for the NStar Chronicle. During this time there have been many changes within the Project North Star Association. 
 
-\begin{figure}[htbp]
-  \vspace{2em}
-  \centering
-  %name of the graphic, without the path AND in EPS format:
-  \includegraphics[scale=0.5]{richard_mtg.eps}
-  %caption of the figure 
-  \caption*{\small \em Richard at the Quarterly Meeting in April.}
-  %label of the figure, which has to correspond to \ref{}:
-  \label{fig:richard_mtg}
-\end{figure}
+In my last Notes, I referred to the temporary closure of restoration work by PNSAC volunteers on 
+the North Star. We effectively did not restart operations until the middle of last year which 
+resulted in a considerable loss of momentum for the Association as a whole together with the 
+resignation of some of our directors and officers.
 
-During the shut down period some limited work has been continuing. Two
-volunteers have been working in the cockpit of the plane and two other
-volunteers have been doing some work on \#3 engine reassembly.
+Last November we held our Annual General Meeting, which will in future be held in the Fall rather 
+than in the summer when many of our members are on vacation. At this AGM two new directors were 
+elected to replace two out of the three directors who had resigned.
 
-While the restoration work has been on hold, we have arranged three
-monthly Volunteer Lunches at the Museum to enable the people who
-normally work on the plane to meet and socialize. Although we would
-all like to be working on the plane, we understand why the Museum has
-had to ask us to temporarily suspend our activities. The Volunteer
-Lunches are a way of keeping the team together and up-to-date on what
-is happening. 
+We were very happy to welcome Roger Button and Phil Chrysler as new directors. Roger has been our corporate secretary. Phil has been our merchandise manager for several years and has also acted as assistant treasurer to the Association. 
 
-At the last meeting of the PNSAC Board of Directors we agreed to
-reschedule the Annual General Meeting from June each year to
-September. It has always been difficult to find a good weekend in June
-to hold the AGM and it is felt that a middle of September date would
-be much better. Our corporate secretary, Roger Button, is aware of
-this proposed change and has confirmed that the existing Board of
-Directors can extend its term until the new AGM date.
+Drew Hodge, our long time NStar Chronicle publisher and webmaster, has after ten years, decided 
+that he would like to spend more time on his other interests and did not stand for re-election as a director. Drew will continue to publish the NStar Chronicle and we are very pleased to 
+welcome Garth Pyper as our new webmaster. 
 
-Although there has been little restoration work done since December,
-we are working with the Museum to get the project back on track again
-in early June. We are also working to enable us to recruit new
-volunteers to replace the several people who for various reasons have
-had to give up active work.
+Bill Tate has been our vice president and  highly regarded special events coordinator for several years but decided that it was time to hand over to someone else. 
 
-One of the recent discussion areas has been in connection with
-long-term funding of the restoration project. Everybody is aware that
-funding from the Federal Government has been substantially reduced. We
-have accepted that major  expenditures will have to be met from funds
-raised by donations from friends of the Museum and members of our
-Association. This is a significant challenge since everybody receives
-many appeals throughout the year for donations from many different
-deserving organizations. 
+Bruce Grant, who has ably editor the NS Chronicle for several years, also decided not to continue as a director and officer. Roger has agreed to take over the editor's  job where I am expecting that his word smithing abilities as a lawyer will come in handy.
 
-During the next few months we hope to develop a revised restoration
-work plan which will enable us to estimate the funds needed to
-complete the project. We will then be able to target appeals for funds
-to carry out specific parts of the restoration in the same way as we
-did for our successful appeal for funds to make troop seats for the
-interior of the plane.
+The table officers of the Association  are now:  myself as president; Bruce Gemmill ,our senior project manager, as vice president; Roger  as secretary; and Paul Labranche as treasurer. 
+
+While the changes have been taking place with the executive of the Association, work has continued with our main reason for being; the restoration of the North Star. Elsewhere in this issue you will find a progress report on the work on the aircraft which as always is being done to a very high standard.
+
+The North Star restoration project, now in its twelve year, will shortly be entering a new phase. 
+Work on the fourth engine will be complete in a few months and we are now reworking our work plan 
+for the restoration as a whole, in conjunction with the conservation professionals at Museum. In 
+a future issue of the NStar Chronicle we hope to provide members with the broad outline of the 
+updated work plan, together with anticipated time scales and funding requirements. Since the Museum does not receive government funds for the North Star restoration, future major work on the aircraft will have to be financed by donations from members and other people interested in preserving a plane which contributed so much to Canada?s military transportation needs in the late 1940s through to the early 1960s.
+
+During the summer we hope to have two major displays of the North Star for Association members and the general public. The first will be during the weekend of June 6/7 when we will be taking part in Doors Open Ottawa and the second will be our usual display on Canada Day. As always, Association members will be particularly welcome at these displays and will be able to see the results of the excellent work being done by the volunteers on the plane.
+
+
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
