--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -63,12 +63,12 @@ and move the engine to the engine stand for restoration.  All cowl
 panels, pipes, hoses and accessories have been removed and stored
 until space is available to restore these items.  The priority has
 been to disassemble the engine, which was completed in October, and
-restoration and reassembly of engine 4 is now well underway.  The
+restoration and reassembly of engine 4 is now well under way.  The
 refurbished crankshaft has been installed in the engine block, and the
 connecting rods and pistons cleaned and polished.  Work has now begun
 on the more complex cylinder heads and valve train assemblies.
 
-Normally, work would also be underway to restore the engine frame, but
+Normally, work would also be under way to restore the engine frame, but
 due to a lack of space, this will be delayed until the engine is back
 together and can be moved out of the engine shop.  Some cleaning and
 paint stripping has been done, but further work on the frame will
@@ -76,7 +76,7 @@ likely have to wait until more space is available for full restoration
 of this large item.  This work will likely delay the completion of Nr
 4 engine until 2016.
 
-\section{Cocpit, Crew Lounge, Galley,  and Forward Washroom}
+\section{Cockpit, Crew Lounge, Galley,  and Forward Washroom}
 \label{crewlounge}
 
 Since our last report, the crew lounge and galley equipment was fully
@@ -115,7 +115,7 @@ The baggage compartments are now fully restored, and the refurbished
 battery elevators were installed just aft of the nose wheel.  Work has
 now begun on the main cabin.  This started with removal of various
 fittings along the starboard side of the cabin, then removing the wood
-paneling below the windows, and then removing the wood cargo floor
+panelling below the windows, and then removing the wood cargo floor
 panels to expose the metal sub floor.  Most of the side panels and
 some floor panels are badly damaged and will need to be replaced.  The
 fittings for patient litters and troop seats were also removed.
@@ -142,7 +142,7 @@ door has been removed for restoration.  The paratroop door insert is
 complete, and the remaining portion of the forward cargo door is being
 stripped and repaired prior to painting.  It is likely this will have
 to be re-installed on the aircraft before all painting and restoration
-is complete, so as not to delay it’s move outside.
+is complete, so as not to delay its move outside.
 
 A major effort was launched to restore the large heater ducts removed
 from the main cabin.  These were covered with formed mica insulation
@@ -174,7 +174,7 @@ of the main cabin.  These could be stowed against the wall to make
 room for cargo, or unrolled and set up to carry military personnel.
 The original seats were removed by the RCAF, so a decision was made to
 make a new set, using funds donated by Project North Star members.
-Seat fabric, steel and aluminum tubing was ordered, and the troop seat
+Seat fabric, steel and aluminium tubing was ordered, and the troop seat
 sections were fabricated, based on available drawings.  All seat
 sections have been completed, and have been stored until the main
 cabin is completed.
