--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -59,7 +59,7 @@
 
 % Editor's notes
 \begin{article}
-	\input{article_EditorsNotes} 
+	\input{article_PresReport} 
 \end{article}
 
 \pagebreak
@@ -80,18 +80,24 @@
 	\input{article_ProgReport} 
 \end{article}
 
-% Report
-% \begin{article}
-% 	\input{article_ProgReport_Sup} 
-% \end{article}
-
 \pagebreak
+
+% Report
+\begin{article}
+    \input{article_ProgReport_Sup} 
+\end{article}
+
 
 % Volunteer's corner ................................................. %
 
+% Feature article
+\begin{article}                 
+	\input{article_Feature2} 
+\end{article}
+
 % Volunteer bio
 \begin{article}                 
- 	\input{article_Volunteer1} 
+ 	\input{article_Volunteer} 
 \end{article}
 
 
