--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -8,27 +8,16 @@
 %\subtitle{Part 4}
 \author{Hugh A. Halladay, Legion Magazine}
 
-\textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
-  Sqn, RCAF.}
-
 \maketitle
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{jim_riddoch.eps}
-   %caption of the figure 
-   \caption*{\small \em Jim Riddoch.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:jim_riddoch.eps}
-\end{figure}
+\textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
+  Sqn, RCAF.}\\
 
 In 1947, while Prime Minister Mackenzie King was in London, his
-Minister of Foreign Affairs (and chosen suc-cessor), Louis St-Laurent,
+Minister of Foreign Affairs (and chosen successor), Louis St-Laurent,
 consented to Canadian participation on the United Nations Temporary
 Commission of Korea (UNTOK). On his return to Canada, King furiously
-confronted St-Laurent. He wanted no part---even at the fringes—of
+confronted St-Laurent. He wanted no part---even at the fringes of
 Korean affairs, which he considered dangerous.
 
 St-Laurent, in turn, threatened to resign. Ultimately, the old prime
@@ -40,10 +29,21 @@ Mackenzie King died on July 22, 1950. As he lay in state in the
 Parliament Buildings, six North Star aircraft of No. 426 Squadron flew
 over, saluting his passing as they were en route to Tacoma,
 Washington, to commence a Royal Canadian Air Force transoceanic
-airlift in sup-port of United Nations forces fighting in Korea.
+airlift in support of United Nations forces fighting in Korea.
 
-It is not known if the former prime minister was spin-ning in his
+It is not known if the former prime minister was spinning in his
 coffin.
+
+\begin{figure*}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{op-hawk-one.jpg}
+   %caption of the figure 
+   %\caption*{\small \em Jim Riddoch.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:op-hawk-one.eps}
+\end{figure*}
 
 Although the RCAF had considerable air transport experience during
 the Second World War, only the work of No. 168 (Heavy Transport)
@@ -56,7 +56,7 @@ RCAF, TCA (Trans-Canada Airlines and later Air Canada) and other civil
 carriers.
 
 The North Star was basically a Douglas DC-4, but with Rolls-Royce
-Merlin in-line engines instead of Pratt-andWhitney radials. It was a
+Merlin in-line engines instead of Pratt-and-Whitney radials. It was a
 dependable aircraft, but generations of passengers and crew would
 remember the tremendous noise and vibration in flight. The full story
 of this is related by Larry Milberry in his 1982 book The Canadair
@@ -74,11 +74,11 @@ the Royal Air Force and United States Air Force. As it happened, the
 airlift seriously degraded the USAF Military Air Transport Service
 (MATS) after flour and coal dust penetrated the seams of every
 participating aircraft. When it was next marshalled to meet the Korean
-crisis, MATS needed all the help it could get—and that was forthcoming
-when the Canadian government committed No. 426 Sqdn.—its only
-long-range transport unit—to the Korean campaign.
+crisis, MATS needed all the help it could get---and that was forthcoming
+when the Canadian government committed No. 426 Sqdn.---its only
+long-range transport unit---to the Korean campaign.
 
-In recounting the RCAF’s transpacific operational story, one must pay
+In recounting the RCAF's transpacific operational story, one must pay
 tribute to Laurence Motiuk, author of two monumental volumes, namely
 Thunderbirds at War: Diary of a Bomber Squadron, and Thunderbirds for
 Peace: Diary of a Transport Squadron, which set out the history of
@@ -87,7 +87,7 @@ given that in the 1950s, RCAF units often submitted incomplete
 historical narratives and in some instances neglected to prepare any
 at all.
 
-Motiuk’s account of the postwar squadron was drawn from numerous
+Motiuk's account of the postwar squadron was drawn from numerous
 unofficial records, including log books as well as the sketchy unit
 reports.
 
@@ -100,10 +100,21 @@ exception of vital northern resupply.
 
 Deployment to McChord Air Force Base, Tacoma, Washington, began on the
 25th. Six North Stars, 12 crews and 185 ground personnel were
-dispatched. Twothirds of the aircrew were veterans of the Second
+dispatched. Two-thirds of the aircrew were veterans of the Second
 World War; the remainder were men who had joined the RCAF after
 1947. Three of the aircraft left Tacoma on the 27th, arriving at
 Haneda in Tokyo two days later. Operation Hawk was under way.
+
+\begin{figure*}[htbp]
+   \vspace{2em}
+   \centering
+   %name of the graphic, without the path AND in EPS format:
+   \includegraphics[scale=0.5]{op-hawk-two.jpg}
+   %caption of the figure 
+   %\caption*{\small \em Jim Riddoch.}
+   %label of the figure, which has to correspond to \ref{}:
+   \label{fig:op-hawk-two.eps}
+\end{figure*}
 
 It might be noted that No. 426 Sqdn. was not alone in supporting
 operations in Korea. Historian Carl Mills reminds us that Canadian
@@ -117,7 +128,7 @@ Yakutat, Alaska; no trace was ever found.
 The North Stars followed a challenging route. From McChord to
 Elmendorf Air Force Base in Alaska was 1,490 miles. This was followed
 by a 1,537-mile run to Shemya Air Force Base in the Aleutian
-Islands. Next came the 2,104mile flight to Haneda in Tokyo, with the
+Islands. Next came the 2,104 mile flight to Haneda in Tokyo, with the
 aircraft making landfall at Matsushima (Honshu, Japan).
 
 The Shemya-Matsushima leg was particularly challenging; care had to
@@ -140,18 +151,18 @@ aircraft across the Pacific. In the whole of 1951 it was 193 missions,
 but in 1952 it dropped to 133. Not only were the Thunderbirds
 returning to more traditional duties in Canada, they were also
 assuming the job of providing transport, including personnel
-rotation, to Canada’s growing land and air presence in Europe. In
-1953—the last full year of Hawk—it was 85 missions.
+rotation, to Canada's growing land and air presence in Europe. In
+1953---the last full year of Hawk---it was 85 missions.
 
 The final Hawk mission departed McChord on May 31, 1954, and ended at
-the squadron’s home base at Dorval on June 9, 1954. As it wound up, an
+the squadron's home base at Dorval on June 9, 1954. As it wound up, an
 RCAF dispatch reported that No. 426 Sqdn. had flown 599 round
-trips—four of them directly to Korea itself—logged 34,000 flying
+trips---four of them directly to Korea itself---logged 34,000 flying
 hours, carried 13,000 personnel, and airlifted 3,500 tons of
 freight. The report erred on two points. Six flights (not four) had
 gone directly to Korea. The other discrepancy was that there were
 only 584 missions; for some unknown reason the numbered listing of
-flights had jumped from “439” on Nov. 26, 1952, to “455” on Nov. 28,
+flights had jumped from "439" on Nov. 26, 1952, to "455" on Nov. 28,
 1952; the inaccurate 1954 press release continues to be quoted, ad
 nauseam, to this day.
 
@@ -179,7 +190,7 @@ aircraft, its tail still sticking out of the water, during the final
 approach into Sandspit. Happily, Mussells landed safely.
 
 On April 19, 1951, a North Star piloted by Flight Lieutenant J.A. Watt
-was on a route-training flight to an unfamiliar field—Ashiya—located
+was on a route-training flight to an unfamiliar field---Ashiya---located
 between Osaka and Kobe, Japan. He was cleared by Ashiya tower to
 descend from 4,000 to 3,000 feet. At 3,400 feet the aircraft hit trees
 atop a hill that was not even indicated on the airfield map. No one
@@ -201,7 +212,7 @@ savage crosswind blowing at a 90-degree angle. The runway surface was
 covered with wet snow; braking conditions were poor. On the third
 landing attempt, everything came together in the worst possible
 way. The North Star was blown off the runway into a gully. Everyone
-survived, but 17516 was a total “write-off”–the only RCAF aircraft
+survived, but 17516 was a total "write-off"---the only RCAF aircraft
 lost in the course of Operation Hawk.
 
 Canadian military policy with respect to honours and awards was very
@@ -209,7 +220,7 @@ restrictive from 1946 onwards, but rules were relaxed during the
 Korean War. Personnel involved in Hawk were awarded one Officer of the
 Order of the British Empire (OBE), one Member of the Order of the
 British Empire (MBE), four Air Force Crosses, two Air Force Medals and
-13 Queen’s Commendations. Most of these were to aircrew personnel, but
+13 Queen's Commendations. Most of these were to aircrew personnel, but
 Sqdn. Ldr. W.H. Lord was granted an MBE for his work in establishing
 and supervising the maintenance detachments that serviced the North
 Stars wherever they alighted along the 11,000 mile route.
