--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -1,86 +1,56 @@
-% Template PNSAC newsletter - Article
-% Language: Latex
+% Template PNSAC newsletter - Article % Language: Latex
 %
 
 % Head
 
-\title{Elise D\'{e}roche, Aviatrice}
-\author{Bruce Grant, Fl\^{a}neur}
+\title{Volunteers Needed} \author{Richard Lodge}
 
 \maketitle
 
-Wandering about in Paris recently I came upon a plaque, bolted to a
-wall at 61 Rue de la Verrerie in the 4th. Wandering about is my
-favourite activity in Paris. Let others wait in the long lines at the
-tourist sites (I've done all that) or plunder the shops in Faubourg
-Saint Honor\'{e} (I'll never do that); I wander about.
+The Project North Star Association has two types of volunteers. The
+first are known as Restoration volunteers and they are the group who
+get their hands dirty and physically work on the restoration of the
+aeroplane. The other group are known as Association volunteers and
+they work in other very important areas of our Association.
 
-So, who was this Elise D\'{e}roche a.k.a. Baronne Elisa Raymonde de
-Laroche, Aviatrice?  I took the picture and resolved to look her up at
-home.
+At present we are not looking for any more Restoration volunteers but
+we do have a need for some Association volunteers. In particular we
+are looking for a Social Events Coordinator and a Merchandise Manager
+and volunteers who would work with those officers.  These volunteer
+posts have become open because the existing volunteers have held the
+positions for some years and in each case have decided that it is time
+to pursue other interests within the Association.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{aviatrice.eps}
-   %caption of the figure 
-   %\caption*{\small \em Garry installing the intercooler on engine 3.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:aviatrice}
-\end{figure}
+Below are brief details of the requirements for each volunteer
+position. By volunteering for one of these functions, a volunteer will
+become more involved with Association activities and will enjoy the
+comradeship and rewards of working with a very interesting group of
+people who have many diverse life experiences.
 
-Here's a brief outline of the story I encourage readers to look
-for her online.  Many sites relate her story though with some
-contradictions among the various accounts.
+The Social Events Coordinator is the person responsible within the
+Association for overseeing and organizing events for
+members. Typically, he or she would, with the assistance of others,
+organize the Members Meetings which are mostly held every three months
+and such other events as he or she might agree to run as approved by
+the Board of Directors.
 
-Born into the working class family of a plumber, Elise D\'{e}roche
-became an artist and actress, took the stage name of Baronne Elisa
-Raymonde de Laroche. She also became the "amie intime" of the artist
-and aviator L\'{e}on Delagrange who introduced her to his friend Charles
-Voisin, a builder of airplanes.
+The Merchandise Manager is responsible for managing the Association's
+stock of merchandise for sale, setting the ordering levels as agreed
+with the Board of Directors, placing orders for new stock and ensuring
+that sales and inventory levels are properly reported to the
+Treasurer. Other volunteers assist the Merchandise Manager in the
+work.
 
-There is an interesting chronology that indicates a life full of
-tragedy, a life that she lived with intensity and audacity: L\'{e}on
-Delagrange died, January 1910 when the wing came off his Bl\'{e}riot
-airplane. Elise recovered quickly from her grief and appealed to her
-new ami intime Charles Voisin to teach her to fly. She won her pilot's
-licence in March 1910. A crash in July 1910 put her in hospital with
-18 fractures. She recovered and returned to flying.
+If any of our members are interested in taking over one of these
+positions or working with these officers or know of a non-member who
+would be interested, please would he or she contact me by email at
+\email{info@projectnorthstar.ca} or by phone on (613) 612-4920.
 
-In a car crash in September 1912, Charles Voisin was killed but
-Elise survived. She maried the pilot Jacques Vial in February of
-1915, her first marriage. During the war, she was not allowed to
-fly but served in the military as a driver. In 1918 her only
-child Andr\'{e} (with L\'{e}on Delagrange) died aged 15 of the Spanish
-Flu. July 1919, she was killed in a plane crash while training to
-become a test pilot. Audace? Mais oui!
-
-La Baronne Elisa Raymonde de Laroche is buried in Cimeti\`{e}re
-P\`{e}re Lachaise in Paris.
-
-\vspace{10mm}
-
-\begin{centering}
-My candle burns at both ends;\\
-It will not last the night;\\
-But ah, my foes, and oh, my friends --\\
-It gives a lovely light!\\
-\vspace{2mm}
-\begin{footnotesize}
-Edna St. Vincent Millay
-\end{footnotesize}
-
-\end{centering}
-
-\begin{footnotesize}
-    \raggedleft PNSAC\\
+\begin{footnotesize} \raggedleft PNSAC\\
 \end{footnotesize}
 
 % End of text.
 
-%%% Local Variables: 
-%%% mode: latex
-%%% TeX-master: main_document.tex
-%%% End: 
+%%% Local Variables: %%% mode: latex %%% TeX-master: main_document.tex
+%%% End:
 
