Adding and updating content for Jan/Feb 2016 newsletter.

--- a/pnsac/newsletter/article_Feature1.tex
+++ b/pnsac/newsletter/article_Feature1.tex
@@ -4,226 +4,133 @@
 
 % Head
 
-\title{Operation Hawk}
+\title{Volunteers Working on North Star Restoration}
 %\subtitle{Part 4}
-\author{Hugh A. Halladay, Legion Magazine}
+\author{Tom MacGregor, Legion Magazine}
 
 \maketitle
 
-\textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
-  Sqn, RCAF.}\\
+% \textit{Photos courtesy of Library Archives Canada and 426 Thunderbird
+%  Sqn, RCAF.}\\
 
-In 1947, while Prime Minister Mackenzie King was in London, his
-Minister of Foreign Affairs (and chosen successor), Louis St-Laurent,
-consented to Canadian participation on the United Nations Temporary
-Commission of Korea (UNTOK). On his return to Canada, King furiously
-confronted St-Laurent. He wanted no part---even at the fringes of
-Korean affairs, which he considered dangerous.
+\begin{quotation}
+	You have to be careful opening up the panels covering the 
+	engines, you never know if a bird or some animal might have made
+	its home there.
+\end{quotation}
 
-St-Laurent, in turn, threatened to resign. Ultimately, the old prime
-minister backed down. The incident marked a phase in the changing of
-the guard in Ottawa, and a movement towards increasing Canadian
-involvement in international affairs.
+That’s one lesson a group of dedicated volunteers has learned in its
+10 years of painstaking work restoring a Royal Canadian Air Force
+North Star aircraft at the Canada Aviation and Space Museum in Ottawa.
 
-Mackenzie King died on July 22, 1950. As he lay in state in the
-Parliament Buildings, six North Star aircraft of No. 426 Squadron flew
-over, saluting his passing as they were en route to Tacoma,
-Washington, to commence a Royal Canadian Air Force transoceanic
-airlift in support of United Nations forces fighting in Korea.
+%\begin{figure*}[htbp]
+%	\vspace{2em}
+%	\centering
+%	%name of the graphic, without the path AND in EPS format:
+%	\includegraphics[scale=0.5]{op-hawk-one.jpg}
+%	%caption of the figure 
+%	%\caption*{\small \em Volunteers put in countless hours restoring a
+%	North Star aircraft.}
+%	%label of the figure, which has to correspond to \ref{}:
+%	\label{fig:op-hawk-one.eps}
+%\end{figure*}
 
-It is not known if the former prime minister was spinning in his
-coffin.
+The aircraft had sat neglected outside the museum for
+years. “Essentially, the RCAF flew this one into the Rockcliffe Airport
+when it was decommissioned. It sat in a old until Robert Holmgren said
+someone should do something about it,” said project manager Bruce
+Gemmill.
 
-\begin{figure*}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{op-hawk-one.jpg}
-   %caption of the figure 
-   %\caption*{\small \em Jim Riddoch.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:op-hawk-one.eps}
-\end{figure*}
+The airplane had been stripped of its non-essential gear and turned
+over to what was then the National Aeronautical Collection, housed in
+hangars built during the Second World War at the former RCAF station
+at Rockcliffe in Ottawa. Time and weather took its toll. Birds and
+animals made nests where they could get inside the panelling.
 
-Although the RCAF had considerable air transport experience during
-the Second World War, only the work of No. 168 (Heavy Transport)
-Sqdn., delivering service mail to Europe, constituted a sustained
-transatlantic operation. With the retirement of its Fortress and
-Liberator aircraft, which were converted from bombers to freighters,
-the RCAF briefly lost its long-range transport capability. This gap
-was soon filled by the Canadair North Star, built in Montreal for the
-RCAF, TCA (Trans-Canada Airlines and later Air Canada) and other civil
-carriers.
+“We approached the museum about restoring the aircraft. At first, they
+didn’t know how to take us,” said Gemmill. “The museum had its own
+professional conservation staff but it had never worked with a team of
+volunteers.”
 
-The North Star was basically a Douglas DC-4, but with Rolls-Royce
-Merlin in-line engines instead of Pratt-and-Whitney radials. It was a
-dependable aircraft, but generations of passengers and crew would
-remember the tremendous noise and vibration in flight. The full story
-of this is related by Larry Milberry in his 1982 book The Canadair
-North Star.
+Eventually the museum agreed to work with the volunteers who formed
+the Project North Star Association of Canada with the late Robert
+Holmgren as president. “We became the model for other volunteer groups
+now working with the museum,” said the association’s current
+president, Richard Lodge.
 
-Deliveries of the new aircraft to the RCAF were delayed when
-priority was given to TCA to help it establish a Canadian presence in
-transatlantic commercial flying. Crews of No. 426 (Thunderbird)
-Sqdn. finally began North Star training early in 1948, and actual
-operations on the type commenced that summer.
+Now the aircraft gets towed into a hangar where it is available to the
+volunteers between September and May before it is towed outside for
+the summer.
 
-While the RCAF did not participate in the July 1948 to May 1949 Berlin
-Airlift, a few individual aircrew did while on exchange duties with
-the Royal Air Force and United States Air Force. As it happened, the
-airlift seriously degraded the USAF Military Air Transport Service
-(MATS) after flour and coal dust penetrated the seams of every
-participating aircraft. When it was next marshalled to meet the Korean
-crisis, MATS needed all the help it could get---and that was forthcoming
-when the Canadian government committed No. 426 Sqdn.---its only
-long-range transport unit---to the Korean campaign.
+The North Star was built by Canadair in the late 1940s and 1950s. It
+was the RCAF version of the DC-4 civilian aircraft except that it used
+four Rolls-Royce Merlin engines. Canadair built 71 of the aircraft.
 
-In recounting the RCAF's transpacific operational story, one must pay
-tribute to Laurence Motiuk, author of two monumental volumes, namely
-Thunderbirds at War: Diary of a Bomber Squadron, and Thunderbirds for
-Peace: Diary of a Transport Squadron, which set out the history of
-No. 426 Sqdn. The latter work was particularly difficult to write,
-given that in the 1950s, RCAF units often submitted incomplete
-historical narratives and in some instances neglected to prepare any
-at all.
+The RCAF assigned the rst North Stars to 412 Squadron where they
+transported VIPs and were used in various transfigurations for
+reliable, long-range transport services.
 
-Motiuk's account of the postwar squadron was drawn from numerous
-unofficial records, including log books as well as the sketchy unit
-reports.
+During the Korean War the North Star was used by No. 426 (Thunderbird)
+Sqdn. to ferry sup- plies across the Pacific Ocean to Japan (Operation
+Hawk: The Korean Airlift, July/August). They would y 599 round trips
+over the Pacific and deliver seven million pounds of cargo and 13,000
+personnel on return trips. All this was achieved without a fatal
+crash.
 
-Almost from the moment that North Korea launched its invasion of South
-Korea on June 25, 1950, No. 426 Sqdn. personnel were preparing for
-overseas operations. If Canada was going to be involved, that unit was
-certain to be mobilized. Cabinet approval came through on July 19,
-1950. The squadron cancelled all further transport work with the
-exception of vital northern resupply.
+Most of the air force’s North Stars were declared surplus in the
+1970s.
 
-Deployment to McChord Air Force Base, Tacoma, Washington, began on the
-25th. Six North Stars, 12 crews and 185 ground personnel were
-dispatched. Two-thirds of the aircrew were veterans of the Second
-World War; the remainder were men who had joined the RCAF after
-1947. Three of the aircraft left Tacoma on the 27th, arriving at
-Haneda in Tokyo two days later. Operation Hawk was under way.
+In the 10 years that Project North Star has been in operation, the
+group has restored two of the four Merlin engines with a third one
+nearly completed.
 
-\begin{figure*}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{op-hawk-two.jpg}
-   %caption of the figure 
-   %\caption*{\small \em Jim Riddoch.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:op-hawk-two.eps}
-\end{figure*}
+Each engine had to be taken o the aircraft, brought into the museum’s
+shops where they were taken apart. Each item was tagged, catalogued 
+and usually photographed. “We take a lot of photographs. That’s
+how we know how they go back together,” said Lodge.
 
-It might be noted that No. 426 Sqdn. was not alone in supporting
-operations in Korea. Historian Carl Mills reminds us that Canadian
-Pacific Airlines provided charter services to MATS from August 1950 to
-March 1955, conducting 703 transpacific flights. Unlike the RCAF
-operation, these involved passengers only. They lost one aircraft
-(CF-CPC), a DC-4 with seven crew members and 31 passengers on July 2,
-1951. The aircraft, outbound from Vancouver, disappeared near
-Yakutat, Alaska; no trace was ever found.
+Engine project leader Garry Dupont said, “The first engine took us about
+four and a half years to restore. We’re almost finished the third engine
+which as taken us about two years. So we are getting faster.” The
+propellers were restored separately by Hope Aero Propeller and
+Components Inc. in Mississauga, Ont. All restoration work has to be up
+to the professional standards set by the museum.
 
-The North Stars followed a challenging route. From McChord to
-Elmendorf Air Force Base in Alaska was 1,490 miles. This was followed
-by a 1,537-mile run to Shemya Air Force Base in the Aleutian
-Islands. Next came the 2,104 mile flight to Haneda in Tokyo, with the
-aircraft making landfall at Matsushima (Honshu, Japan).
+The group plans to restore the aircraft to its original look, not to
+have it y again.
 
-The Shemya-Matsushima leg was particularly challenging; care had to
-be taken not to drift into Russian airspace, a task complicated by
-Russian efforts to jam radio and navigational aids. Depending on the
-season, the aircraft might return by the same route, or take a more
-southerly central Pacific track from Haneda to Wake Island to Hickam
-Air Force Base in Honolulu. From there the aircraft would journey to
-Travis Air Force Base in San Francisco, and then on to McChord.
+Lodge said that they have some RCAF manuals but a lot of time they do
+not help when it comes to putting 50-year-old parts together today.
 
-Initially it was hoped the unit could dispatch one sortie per day, but
-this proved beyond the resources of a six-plane outfit. Eventually,
-No. 426 found it could send off five aircraft per week. Not
-surprisingly, its peak activity coincided with the buildup of United
-Nations forces in Korea and their maintenance during the period of
-mobile warfare.
+The aircraft itself, 17515, has seen countless hours of work put into
+re- storing the cockpit with all its switches and navigation
+equipment and a small galley for the crew of seven.
 
-Between July 28 and Dec. 31, 1950, the squadron dispatched 123
-aircraft across the Pacific. In the whole of 1951 it was 193 missions,
-but in 1952 it dropped to 133. Not only were the Thunderbirds
-returning to more traditional duties in Canada, they were also
-assuming the job of providing transport, including personnel
-rotation, to Canada's growing land and air presence in Europe. In
-1953---the last full year of Hawk---it was 85 missions.
+Still to be done is work in the cargo section and painting the
+exterior of the aircraft.
 
-The final Hawk mission departed McChord on May 31, 1954, and ended at
-the squadron's home base at Dorval on June 9, 1954. As it wound up, an
-RCAF dispatch reported that No. 426 Sqdn. had flown 599 round
-trips---four of them directly to Korea itself---logged 34,000 flying
-hours, carried 13,000 personnel, and airlifted 3,500 tons of
-freight. The report erred on two points. Six flights (not four) had
-gone directly to Korea. The other discrepancy was that there were
-only 584 missions; for some unknown reason the numbered listing of
-flights had jumped from "439" on Nov. 26, 1952, to "455" on Nov. 28,
-1952; the inaccurate 1954 press release continues to be quoted, ad
-nauseam, to this day.
+“We know this aircraft ew during the Korean War. In fact, we have 
+pictures showing it configured with litters to bring the wounded back to
+Canada,” said Gimmell. “We don’t want to put in the litters but we
+have people working on creating the rope seats that were used.”
 
-Operation Hawk was accomplished with no fatalities but some close
-calls and more than a few incidents. On Sept. 15, 1950, Wing Commander
-C.H. Mussells, Commanding Officer of No. 426 Sqdn., departed McChord
-for Elmendorf with American soldiers and anti-tank ammunition. Both
-were urgently needed in Korea, so the aircraft had been permitted an
-overload clearance.
+The plan is to paint the aircraft to its post-1965 markings, since it
+was painted with the Maple Leaf ag on it.
 
-Three hours after takeoff, one of the Merlin engines began overheating
-through a coolant leak. Mussells shut down the engine, feathered the
-propeller, and prepared to return to McChord. Then a second engine on
-the same side overheated. It was also shut down. There was now no
-question about getting to McChord; Mussells prepared to make an
-emergency landing at Sandspit (Moresby Island).
+Still the search goes on to nd new members for the association. “The
+important thing is to nd new people to whom we can pass on this 
+knowledge and skills we are developing,” said Lodge.
 
-To lighten the aircraft, Mussells dumped excess fuel. Some passengers
-mistook the misty gasoline trail for smoke, panicked and crowded to
-the back of the fuselage, as if that would have offered safety. This
-complicated the process of trimming the aircraft for landing. A
-crewman ordered everyone back to their seats, but the soldiers could
-not have been reassured as the North Star flew over a crashed USAF
-aircraft, its tail still sticking out of the water, during the final
-approach into Sandspit. Happily, Mussells landed safely.
 
-On April 19, 1951, a North Star piloted by Flight Lieutenant J.A. Watt
-was on a route-training flight to an unfamiliar field---Ashiya---located
-between Osaka and Kobe, Japan. He was cleared by Ashiya tower to
-descend from 4,000 to 3,000 feet. At 3,400 feet the aircraft hit trees
-atop a hill that was not even indicated on the airfield map. No one
-was injured but the aircraft sustained considerable damage to its
-nose, oil cooler and exterior radio aerials. The pitot head was also
-wiped out, and with it the airspeed indicator. The aircraft also lost
-the use of an engine.
 
-Fortunately, the passengers included three of the most experienced
-North Star captains in the RCAF: Wing Cmdr. Mussells, Wing
-Cmdr. J.K. MacDonald, and Flying Officer Robert Edwards. After
-assessing the damage, Mussells ordered MacDonald and Edwards to com-
-plete the landing, which they did.
 
-On the night of Dec. 27, 1953, Squadron Leader E.L. Hare was homeward
-bound from Japan in North Star 17516, bound for Shemya. The weather
-was bad and the ceiling minimal. Visibility was a half mile with a
-savage crosswind blowing at a 90-degree angle. The runway surface was
-covered with wet snow; braking conditions were poor. On the third
-landing attempt, everything came together in the worst possible
-way. The North Star was blown off the runway into a gully. Everyone
-survived, but 17516 was a total "write-off"---the only RCAF aircraft
-lost in the course of Operation Hawk.
 
-Canadian military policy with respect to honours and awards was very
-restrictive from 1946 onwards, but rules were relaxed during the
-Korean War. Personnel involved in Hawk were awarded one Officer of the
-Order of the British Empire (OBE), one Member of the Order of the
-British Empire (MBE), four Air Force Crosses, two Air Force Medals and
-13 Queen's Commendations. Most of these were to aircrew personnel, but
-Sqdn. Ldr. W.H. Lord was granted an MBE for his work in establishing
-and supervising the maintenance detachments that serviced the North
-Stars wherever they alighted along the 11,000 mile route.
+
+
+
+
+
+
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
