--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,9 +49,9 @@
 
 \begin{document}
 
-\volume{11} % \volnumber{10}
+\volume{12} % \volnumber{1}
 \issue{1}
-\date{April 2015} 
+\date{January 2016} 
 \titlepage
 
 % Editor's notes
@@ -59,10 +59,17 @@
 
 % Editor's notes
 \begin{article}
-	\input{article_PresReport} 
+	\input{article_EditorsNotes} 
 \end{article}
 
 \pagebreak
+
+% GDG CASM report .................................................... %
+
+% Report
+\begin{article}
+	\input{article_MessageDGCASM} 
+\end{article}
 
 % President's report ................................................. %
 
@@ -82,24 +89,12 @@
 
 \pagebreak
 
+% Member interview ................................................... %
+
 % Report
 \begin{article}
-    \input{article_ProgReport_Sup} 
+    \input{article_MemberInterview} 
 \end{article}
-
-
-% Volunteer's corner ................................................. %
-
-% Feature article
-\begin{article}                 
-	\input{article_Feature2} 
-\end{article}
-
-% Volunteer bio
-\begin{article}                 
- 	\input{article_Volunteer} 
-\end{article}
-
 
 % Features
 % ........................................................... %
